Build Modal Popup Difirent way and Style.

--- a/index.html
+++ b/index.html
@@ -17,17 +17,40 @@
 
   </head>
   <body>
-    <!-- Modal Open Button -->
-    <button id="open-btn">
-      <p>Where's Our Modal</p>
-    </button>
-    <!-- Modal & Background -->
-    <div id="modal-container">
-      <div id="modal">
-        <p>Here Our Modal</p>
-        <div id="close-btn">&times;</div>
-      </div>
-    </div>
+    <h1>Modals the <em>easy</em> way</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit alias
+      dicta quibusdam cumque ipsa ipsum reiciendis animi, officia provident
+      veniam quis delectus minima earum suscipit ea, beatae vitae ipsam nemo.</p>
+    <p>Alias, architecto sapiente nostrum id, sed explicabo numquam aspernatur
+      ratione qui excepturi repellat porro culpa molestiae? Culpa dolorem
+      commodi cupiditate, eos deleniti similique repellendus nam velit natus a
+      soluta et.</p>
+    <p>Fugiat ratione impedit officiis? Eligendi sapiente culpa tenetur esse quo
+      reiciendis illum vero nisi ullam consequatur illo molestiae, nihil eaque.
+      Esse asperiores tenetur natus! Quo asperiores molestias sed assumenda
+      alias.</p>
+    <p>Sequi quo animi, nostrum laboriosam veritatis consequatur. Eos cumque
+      unde porro explicabo provident, possimus alias magni pariatur quis
+      consequuntur voluptatum? Debitis necessitatibus facilis fugiat repudiandae
+      nobis neque nam, vel odio?</p>
+    <button class="button open-button">open modal</button>
+
+    <dialog class="modal" id="modal">
+      <h2>An interesting title</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum esse
+        nisi, laboriosam illum temporibus ipsam?</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, quo.</p>
+      <button class="button close-button">close modal</button>
+
+
+      <form class="form" method="dialog">
+        <label>Your name <input type="text"></label>
+        <label>Your email <input type="email"></label>
+        <button class="button" type="submit">submit form</button>
+      </form>
+
+    </dialog>
+
     <script src="app.js" defer></script>
   </body>
 </html>
